Replace a call to the deprecated API "Class.newInstance()".